<resources>
    <string name="app_name">ICV</string>
    <string name="facebook_app_id">422889488414816</string>
    <string name="fb_login_protocol_scheme">fb422889488414816</string>
    <string name="title_activity_prueba_boton">pruebaBoton</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pruea">Prueba</string>
    <string name="title_activity_maps">Map</string>
    <string name="imgDefectoUpload"><![CDATA[https://firebasestorage.googleapis.com/v0/b/icv-project.appspot.com/o/ingresar.png?alt=media&token=9847b2ed-ec9a-4d63-8c75-8fa406a2042f]]></string>
    <string name="titulo_de_anuncio">Titulo de anuncio: </string>
    <string name="culaquiera">culaquiera</string>
    <string name="vendedor">Vendedor: </string>
    <string name="telefono">Telefono: </string>
    <string name="precio">Precio: </string>
    <string name="comentario_del_vendedor">Comentario del vendedor: </string>
    <string name="ubicaci_n">Ubicación: </string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="a_o">Año</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="informaci_n_t_cnica">Información Técnica</string>
    <string name="editar">Editar</string>
    <string name="filtrar">Filtrar</string>
    <string name="anuncios">Anuncios</string>
    <string name="cancelar">cancelar</string>
    <string name="tipo_de_precio">Tipo de precio</string>
    <string name="motor">Motor</string>
    <string name="interior">Interior</string>
    <string name="exterior">Exterior</string>
    <string name="ver_mas">Ver Mas</string>
    <string name="_10_04_1999">10/04/1999</string>
    <string name="nombre">Nombre</string>
    <string name="imagen">Imagen</string>
    <string name="marca_">Marca:</string>
    <string name="modelo_">Modelo:</string>
    <string name="catalogo1">Catalogo</string>
    <string name="correo_electronico1">Correo Electronico</string>
    <string name="password1">Password</string>
    <string name="crear_una_nueva_cuenta">Crear una nueva cuenta</string>
    <string name="linea1">--------------------------</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="login1">Login</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="cambiar_foto">Cambiar Foto</string>
    <string name="ya_tines_una_cuenta">¿Ya tines una cuenta?</string>
    <string name="registrase2">Registrase</string>
    <string name="registrarse2">Registrarse</string>
    <string name="buscar23">Buscar</string>
    <string name="_500">500</string>
    <string name="titulo_del_anuncio">Titulo del anuncio:</string>
    <string name="motor_">Motor:</string>
    <string name="a_o_">Año:</string>
    <string name="kilometraje">Kilometraje:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="n_mero_contacto">Número Contacto:</string>
    <string name="ingrese_el_titulo">Ingrese el titulo</string>
    <string name="ingrese_el_a_o">Ingrese el año</string>
    <string name="ingrese_el_kilometraje">Ingrese el kilometraje</string>
    <string name="ingrese_la_descripcion">Ingrese la descripcion</string>
    <string name="ingrese_n_mero_de_contacto">Ingrese número de contacto</string>
    <string name="ingrese_el_precio">Ingrese el precio</string>
    <string name="precio_fijo">Precio Fijo</string>
    <string name="precio_negociable">Precio Negociable</string>
    <string name="cambiar_ubicacion">Cambiar Ubicacion</string>
    <string name="publicar_anuncio">Publicar anuncio</string>
    <string name="ingrese_el_mensaje">Ingrese el mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="seleccionar_ubicacion">Seleccionar Ubicacion</string>
    <string name="fotos">Fotos</string>
    <string name="user">user</string>
    <string name="_00_00">00:00</string>


</resources>
