<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".publicacion.EditarPublicacion"
    android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_imgpublic"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/txtt"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/titulo_del_anuncio"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/marca_"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/modelo_"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/motor_"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/a_o_"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/kilometraje"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/n_mero_contacto"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/precio"
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/ingrese_el_titulo"
                android:maxLength="20"
                >
            </EditText>

            <Spinner
                android:id="@+id/spinMarca"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="35sp"
                />

            <Spinner
                android:id="@+id/spinModelo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="35sp"
                />

            <Spinner
                android:id="@+id/spinMotorS"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="35sp"
                />

            <EditText
                android:id="@+id/txtAnio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_el_a_o"
                android:inputType="number"
                android:textSize="22sp"
                 />

            <EditText
                android:id="@+id/txtKm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_el_kilometraje"
                android:inputType="number"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_la_descripcion"
                android:textSize="20sp"
                android:lines="2"
                />
            <EditText
                android:id="@+id/txtTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_n_mero_de_contacto"
                android:inputType="phone"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_el_precio"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                >
                <RadioButton
                    android:id="@+id/rdFijo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio_fijo"
                    android:checked="true"
                    android:textSize="20sp"
                    android:buttonTint="@color/colorPrimary"
                    />
                <RadioButton
                    android:id="@+id/rdNego"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio_negociable"
                    android:textSize="20sp"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="300dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <com.google.android.gms.maps.MapView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mapa"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/ubicacion"
            android:onClick="NuevaUbicacion"
            android:backgroundTint="@color/blanco"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/ubicacion"
                android:backgroundTint="@color/blanco"
                >
                <ImageView
                    android:layout_marginStart="15dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/color_negro"
                    android:background="@android:drawable/ic_dialog_map"
                    />

                <Button
                    android:id="@+id/btUbicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/cambiar_ubicacion"
                    android:textColor="@color/color_negro"
                    android:textSize="20sp"
                    android:backgroundTint="@color/blanco"
                    android:onClick="NuevaUbicacion"
                    />
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/btImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_gallery"
            android:layout_gravity="center"
            />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publicar_anuncio"
            android:onClick="Guardar"
            android:background="@drawable/ubicacion"
            android:textColor="@color/color_negro"
            />

    </LinearLayout>
    </LinearLayout>

    </ScrollView>
</LinearLayout>