<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".publicacion.publicar"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <EditText
                    android:id="@+id/txtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="@string/ingrese_el_titulo"
                    android:maxLength="20"
                    >
                </EditText>

                <Spinner
                    android:id="@+id/spinMarca"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    />

                <Spinner
                    android:id="@+id/spinModelo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    />

                <Spinner
                    android:id="@+id/spinMotor"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    />

                <EditText
                    android:id="@+id/txtAnio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_el_a_o"
                    android:inputType="number"
                    android:textSize="20sp"
                    />

                <EditText
                    android:id="@+id/txtKm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_el_kilometraje"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    />

                <EditText
                    android:id="@+id/txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_la_descripcion"
                    android:textSize="20sp"
                    android:lines="2"
                    />

                <EditText
                    android:id="@+id/txtPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_el_precio"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    />
                <EditText
                    android:id="@+id/txtTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_n_mero_de_contacto"
                    android:inputType="phone"
                    android:textSize="20sp"
                    />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="8dp"
                        >
                        <RadioButton
                            android:id="@+id/rdFijo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/precio_fijo"
                            android:checked="true"
                            android:textSize="20sp"
                            android:buttonTint="@color/colorPrimary"
                            />
                        <RadioButton
                            android:id="@+id/rdNego"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/precio_negociable"
                            android:textSize="20sp"
                            />
                    </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/ubicacion"
                android:onClick="seleccionarLocale"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:onClick="seleccionarLocale"

                    >
                    <ImageView
                        android:layout_marginStart="15dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/color_negro"
                        android:background="@android:drawable/ic_dialog_map"
                        android:contentDescription="@string/cambiar_ubicacion"
                        />

                    <Button
                        android:id="@+id/btUbicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/seleccionar_ubicacion"
                        android:textColor="@color/color_negro"
                        android:textSize="20sp"
                        android:backgroundTint="@color/verde"
                        />
                </LinearLayout>
            </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_imgpublic"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    />

            </LinearLayout>
        </LinearLayout>
            <ImageButton
                android:id="@+id/btImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_gallery"
                android:layout_gravity="center"
                android:contentDescription="@string/fotos"
                />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/btPublicarAnuncio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publicar_anuncio"
                android:background="@drawable/ubicacion"
                android:textColor="@color/color_negro"
                />

        </LinearLayout>
</LinearLayout>
    </ScrollView>
</LinearLayout>