<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LayCont"
        android:background="@drawable/marco_redondeado"
        >
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/mycard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="2dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idPublicacion"
                android:visibility="invisible"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_fav"
                android:visibility="invisible"
                />

            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/imagen"
                android:src="@drawable/usuario"
                android:visibility="invisible" />



            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/usuario"
                app:civ_border_color="@color/color_negro"
                app:civ_border_width="2dp"
                app:civ_shadow="false"
                app:civ_shadow_radius="5"
                app:civ_shadow_color="@color/colorPrimary"
                android:id="@+id/profile_image"
                />

            <TextView
                android:id="@+id/txtNombreUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="14dp"
                android:layout_toEndOf="@+id/imgPerfil"
                android:text="@string/nombre"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="14dp"
                android:text="@string/_10_04_1999"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/pruea"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marca_"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_negro"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marca_"
                        android:textSize="14sp"
                        android:textColor="@color/color_negro"
                        android:id="@+id/marcaH"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modelo_"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_negro"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marca_"
                        android:textSize="14sp"
                        android:textColor="@color/color_negro"
                        android:id="@+id/modeloH"
                        />
                </LinearLayout>
            </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:id="@+id/linerPortada"
    >
    <ImageView
        android:id="@+id/imgPortada"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagen" />
</LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/marco3"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btnPrecioP"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pruea" />


            <ImageView
                android:id="@+id/imgFav"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:src="@drawable/corazon1"
                android:tag="sinFav"
                android:contentDescription="@string/imagen" />

            <Button
                android:id="@+id/btnVerMas"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_mas" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lSeparador"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/LayCont"
        >

    </RelativeLayout>


</RelativeLayout>