<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".home"
    android:orientation="vertical"
    android:background="@color/color_blanco"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anuncios"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/color_negro"
            />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/marco3"
    android:orientation="horizontal"
    >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/busqueda"
                android:id="@+id/imgBuscar"
                android:contentDescription="@string/filtrar"
                android:onClick="abrirDialogo"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/filtrar"
                android:onClick="abrirDialogo"
                android:textColor="@color/color_blanco"
                android:background="@color/color_negro2"
                android:id="@+id/btnFiltro"
                />
        </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    >

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/error"
        android:visibility="invisible"
        android:contentDescription="@string/cancelar"
        android:id="@+id/imgCancelar"
        android:onClick="cancelarFiltro"
        />
</LinearLayout>
</LinearLayout>

</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/myRecycleViewView"
           >

       </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>



</LinearLayout>